latihan comvis complete

--- a/TM-2/Latihan/ans.ipynb
+++ b/TM-2/Latihan/ans.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 166,
    "id": "add58e8e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 167,
    "id": "61fd7304",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 168,
    "id": "28ba7f4e",
    "metadata": {},
    "outputs": [],
@@ -63,22 +63,15 @@
     "def menu1():\n",
     "\n",
     "    person_name = os.listdir(train_path)\n",
-    "\n",
     "    face_list = []\n",
     "    class_list = []\n",
     "\n",
     "    for idx, name in enumerate(person_name):\n",
-    "        image_path = os.path.join(train_path, name)\n",
-    "\n",
-    "        for image_name in os.listdir(image_path):\n",
-    "\n",
-    "            full_img_path = os.path.join(image_path, image_name)\n",
+    "        img_path = os.path.join(train_path, name)\n",
+    "        for img_name in os.listdir(img_path):\n",
+    "            full_img_path = os.path.join(img_path, img_name)\n",
     "            img_gray = cv2.imread(full_img_path, cv2.IMREAD_GRAYSCALE)\n",
-    "\n",
     "            detected_faces = face_cascade.detectMultiScale(img_gray, scaleFactor=1.2, minNeighbors=5)\n",
-    "\n",
-    "            if len (detected_faces) < 1:\n",
-    "                continue\n",
     "\n",
     "            for rect in detected_faces:\n",
     "                x, y, w, h = rect\n",
@@ -86,39 +79,30 @@
     "                face_list.append(face_img)\n",
     "                class_list.append(idx)\n",
     "\n",
+    "    face_recognizer.train(face_list, np.array(class_list))\n",
+    "    face_recognizer.save(model_path)\n",
     "\n",
-    "        face_recognizer.train(face_list, np.array(class_list))\n",
-    "        face_recognizer.save(model_path)\n",
+    "    correct_prediction = 0\n",
+    "    total_prediction = 0\n",
     "\n",
-    "        total_prediction = 0\n",
-    "        correct_prediction = 0\n",
+    "    classes = os.listdir(train_path)\n",
     "\n",
-    "        classes = os.listdir(train_path)\n",
+    "    for label, name in enumerate(classes):\n",
+    "        img_path = os.path.join(test_path, name)\n",
+    "        for img_name in os.listdir(img_path):\n",
+    "            full_img_path = os.path.join(img_path, img_name)\n",
+    "            img_gray = cv2.imread(full_img_path, cv2.IMREAD_GRAYSCALE)\n",
+    "            detected_faces = face_cascade.detectMultiScale(img_gray, scaleFactor=1.2, minNeighbors=5)\n",
     "\n",
-    "        for label, person_name in enumerate(classes):\n",
-    "            person_test_path = os.path.join(test_path, person_name)\n",
+    "            for rect in detected_faces:\n",
+    "                x, y, w, h = rect\n",
+    "                face_img = img_gray[y:y+w, x:x+h]\n",
+    "                prediction, _ = face_recognizer.predict(face_img)\n",
+    "                if prediction == label:\n",
+    "                    correct_prediction += 1\n",
+    "                total_prediction += 1\n",
     "\n",
-    "            for img_name in os.listdir(person_test_path):\n",
-    "                full_img_path = os.path.join(person_test_path, img_name)\n",
-    "\n",
-    "                img_gray = cv2.imread(full_img_path, cv2.IMREAD_GRAYSCALE)\n",
-    "                detected_faces = face_cascade.detectMultiScale(img_gray, scaleFactor=1.2, minNeighbors=5)\n",
-    "\n",
-    "                if len (detected_faces) < 1:\n",
-    "                    continue\n",
-    "\n",
-    "                for rect in detected_faces:\n",
-    "                    x, y, w, h = rect\n",
-    "                    face_img = img_gray[y:y+w, x:x+h]\n",
-    "                    \n",
-    "                    predicted_label, _ = face_recognizer.predict(face_img)\n",
-    "\n",
-    "                    if predicted_label == label:\n",
-    "                        correct_prediction += 1\n",
-    "                    \n",
-    "                    total_prediction += 1\n",
-    "\n",
-    "    print (f\"Average Accuracy : {correct_prediction / total_prediction * 100}\")"
+    "    print (f\"Model Accuracy : {correct_prediction / total_prediction * 100} %\")\n"
    ]
   },
   {
@@ -131,37 +115,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 169,
    "id": "dfddad31",
    "metadata": {},
    "outputs": [],
    "source": [
     "def menu2(img_path):\n",
     "\n",
+    "    test_img = img_path\n",
+    "    person_name = os.listdir(train_path)\n",
+    "\n",
     "    face_recognizer.read(model_path)\n",
     "\n",
-    "    test_img = img_path\n",
-    "\n",
+    "    if not os.path.exists(model_path):\n",
+    "        print (\"Model not exist yet, please train the model first\")\n",
+    "        return\n",
+    "    \n",
     "    img_bgr = cv2.imread(test_img)\n",
-    "    img_gray = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2GRAY)\n",
-    "    person_names = os.listdir(train_path)\n",
-    "    detected_faces = face_cascade.detectMultiScale(img_gray, scaleFactor=1.2, minNeighbors=5)\n",
+    "    img_gry = cv2.cvtColor(img_bgr, cv2.COLOR_RGB2GRAY)\n",
+    "\n",
+    "    detected_faces = face_cascade.detectMultiScale(img_gry, scaleFactor=1.2, minNeighbors=5)\n",
     "\n",
     "    for rect in detected_faces:\n",
     "        x, y, w, h = rect\n",
-    "        face_img = img_gray[y:y+w, x:x+h]\n",
+    "        face_img = img_gry[y:y+w, x:x+h]\n",
     "        label, confidence = face_recognizer.predict(face_img)\n",
     "\n",
-    "        name = person_names[label]\n",
-    "        confidence = math.floor(confidence*100)\n",
-    "        text = name + ' ' + str(confidence)\n",
+    "        confidence = math.floor(confidence * 100) / 100\n",
+    "        name = person_name[label]\n",
+    "        text = f\"{name} : {confidence:.2f}%\"\n",
     "\n",
-    "        cv2.rectangle(img_bgr, (x, y), (x+w, y+h) , (0, 255, 0) , 1)\n",
-    "\n",
-    "        cv2.putText(img_bgr, text, (x, y-10), cv2.FONT_HERSHEY_COMPLEX, 1, (255, 0, 0))\n",
-    "\n",
+    "        cv2.rectangle(img_bgr, (x, y), (x+w, y+h), (0, 255, 255), 1)\n",
+    "        cv2.putText(img_bgr, text, (x, y-10), cv2.FONT_HERSHEY_COMPLEX, 1, (255, 0, 0), 1)\n",
     "        cv2.imshow(\"Result\", img_bgr)\n",
-    "        cv2.waitKey(0)"
+    "        cv2.waitKey(0)\n"
    ]
   },
   {
@@ -174,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 170,
    "id": "ea3768db",
    "metadata": {},
    "outputs": [],
@@ -187,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 171,
    "id": "6f3bd773",
    "metadata": {},
    "outputs": [],
@@ -204,13 +191,15 @@
     "            menu2(path)\n",
     "        elif choice == 3:\n",
     "            break\n",
+    "        else:\n",
+    "            print (\"Input invalid please try again or 3 to quit\")\n",
     "\n",
     "    print (\"Thank you for using this application :D\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 172,
    "id": "31b99db7",
    "metadata": {},
    "outputs": [
@@ -218,13 +207,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Train and Test Model\n",
-      "2. Predict Image\n",
-      "3. Exit\n",
-      "Average Accuracy : 50.0\n",
-      "1. Train and Test Model\n",
-      "2. Predict Image\n",
-      "3. Exit\n",
       "1. Train and Test Model\n",
       "2. Predict Image\n",
       "3. Exit\n",
