--- a/TM-2/Latihan/latihan-1.ipynb
+++ b/TM-2/Latihan/latihan-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1b2a2486",
+   "id": "e1c1d4e9",
    "metadata": {},
    "source": [
     "# Import Library"
@@ -10,20 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "add58e8e",
+   "execution_count": 15,
+   "id": "e1b23553",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import cv2\n",
+    "import numpy as np\n",
     "import math\n",
-    "import numpy as np"
+    "import cv2"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5bc5c3b",
+   "id": "6ae401ab",
    "metadata": {},
    "source": [
     "# Data Path"
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61fd7304",
+   "execution_count": 16,
+   "id": "c4f72706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,33 +45,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c010d32d",
+   "id": "8ec214c3",
    "metadata": {},
    "source": [
-    "# Train and Test Model"
+    "# Menu 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28ba7f4e",
+   "execution_count": 17,
+   "id": "d07225cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def menu1():\n",
     "\n",
-    "    person_name = os.listdir(train_path)\n",
+    "    person_names = os.listdir(train_path)\n",
     "    class_list = []\n",
     "    face_list = []\n",
     "\n",
-    "    for idx, name in enumerate(person_name):\n",
+    "    for idx, name in enumerate(person_names):\n",
     "        img_path = os.path.join(train_path, name)\n",
     "        for img_name in os.listdir(img_path):\n",
     "            full_img_path = os.path.join(img_path, img_name)\n",
     "            img_gray = cv2.imread(full_img_path, cv2.IMREAD_GRAYSCALE)\n",
     "            detected_faces = face_cascade.detectMultiScale(img_gray, scaleFactor=1.2, minNeighbors=5)\n",
     "\n",
-    "            if len(detected_faces) < 1:\n",
+    "            if len (detected_faces) < 1:\n",
     "                continue\n",
     "\n",
     "            for rect in detected_faces:\n",
@@ -83,10 +83,10 @@
     "    face_recognizer.train(face_list, np.array(class_list))\n",
     "    face_recognizer.save(model_path)\n",
     "\n",
-    "    correction_prediction = 0\n",
-    "    total_prediction = 0\n",
+    "    correct_pred = 0\n",
+    "    total_pred = 0\n",
     "\n",
-    "    classes = os.listdir(test_path)\n",
+    "    classes = os.listdir(train_path)\n",
     "\n",
     "    for label, name in enumerate(classes):\n",
     "        img_path = os.path.join(test_path, name)\n",
@@ -95,7 +95,7 @@
     "            img_gray = cv2.imread(full_img_path, cv2.IMREAD_GRAYSCALE)\n",
     "            detected_faces = face_cascade.detectMultiScale(img_gray, scaleFactor=1.2, minNeighbors=5)\n",
     "\n",
-    "            if len(detected_faces) < 1:\n",
+    "            if len (detected_faces) < 1:\n",
     "                continue\n",
     "\n",
     "            for rect in detected_faces:\n",
@@ -103,58 +103,65 @@
     "                face_img = img_gray[y:y+w, x:x+h]\n",
     "                prediction, _ = face_recognizer.predict(face_img)\n",
     "                if prediction == label:\n",
-    "                    correction_prediction += 1\n",
-    "                total_prediction += 1\n",
-    "\n",
-    "    print (f\"Accuracy = {(correction_prediction / total_prediction * 100):.2f}%\")"
+    "                    correct_pred += 1\n",
+    "                total_pred += 1\n",
+    "    \n",
+    "    print (f\"Accuracy : {correct_pred/total_pred*100}%\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "73fd21ba",
+   "id": "64f9662f",
    "metadata": {},
    "source": [
-    "# Predict"
+    "# Menu 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "dfddad31",
+   "execution_count": null,
+   "id": "f1b11e96",
    "metadata": {},
    "outputs": [],
    "source": [
     "def menu2(img_path):\n",
     "\n",
+    "    if not os.path.exists(model_path):\n",
+    "        print (\"Train model first\")\n",
+    "        return\n",
+    "    \n",
     "    face_recognizer.read(model_path)\n",
     "\n",
-    "    test_img = img_path\n",
     "    person_names = os.listdir(train_path)\n",
     "\n",
-    "    img_bgr = cv2.imread(test_img)\n",
-    "    img_gray = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2GRAY)\n",
+    "    test_img = img_path\n",
     "\n",
+    "    if test_img is None:\n",
+    "        print (\"The image path is not correct\")\n",
+    "        return\n",
+    "\n",
+    "    img_bgr = cv2.imread(test_img)\n",
+    "    img_gray = cv2.cvtColor(img_bgr, cv2.COLOR_RGB2GRAY)\n",
     "    detected_faces = face_cascade.detectMultiScale(img_gray, scaleFactor=1.2, minNeighbors=5)\n",
     "\n",
     "    for rect in detected_faces:\n",
     "        x, y, w, h = rect\n",
     "        face_img = img_gray[y:y+w, x:x+h]\n",
-    "\n",
     "        label, confidence = face_recognizer.predict(face_img)\n",
     "\n",
-    "        confidence = math.floor(confidence * 100) / 100\n",
+    "        confidence = math.floor(confidence*100)/100\n",
     "        name = person_names[label]\n",
-    "        text = name + \" \" + str(confidence) + \"%\"\n",
+    "        text = name + \" \" + str(confidence)\n",
     "\n",
     "        cv2.rectangle(img_bgr, (x, y), (x+w, y+h), (0, 255, 255), 1)\n",
     "        cv2.putText(img_bgr, text, (x, y-10), cv2.FONT_HERSHEY_COMPLEX, 1, (255, 0, 0))\n",
-    "        cv2.imshow(\"Result\", img_bgr)\n",
-    "        cv2.waitKey(0)"
+    "    cv2.imshow(\"Result\", img_bgr)\n",
+    "    cv2.waitKey(0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7457c902",
+   "id": "beac134b",
    "metadata": {},
    "source": [
     "# Main Menu"
@@ -162,67 +169,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "ea3768db",
+   "execution_count": 19,
+   "id": "d12e8804",
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_menu():\n",
-    "    print (\"1. Train and Test Model\")\n",
+    "    print (\"1. Train Model\")\n",
     "    print (\"2. Predict Image\")\n",
     "    print (\"3. Exit\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6f3bd773",
+   "execution_count": 20,
+   "id": "d95bc3f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
+    "def main_menu():\n",
     "    choice = -1\n",
     "    while True:\n",
     "        print_menu()\n",
-    "        choice = int(input(\"Choose your menu: \"))\n",
+    "        choice = int(input(\"Input  Menu: \"))\n",
     "        if choice == 1:\n",
     "            menu1()\n",
     "        elif choice == 2:\n",
-    "            path = input(\"Input your absolute path of the image: \")\n",
+    "            path = input(\"Put absolute path: \")\n",
     "            menu2(path)\n",
     "        elif choice == 3:\n",
     "            break\n",
     "        else:\n",
-    "            print (\"Invalid Menu Input1\")\n",
-    "    print (\"Thanks!\")"
+    "            print (\"Invalid Menu!\")\n",
+    "\n",
+    "    print (\"Thanks\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "31b99db7",
+   "execution_count": 21,
+   "id": "195549cd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Train and Test Model\n",
+      "1. Train Model\n",
       "2. Predict Image\n",
       "3. Exit\n",
-      "Accuracy = 50.00%\n",
-      "1. Train and Test Model\n",
+      "1. Train Model\n",
       "2. Predict Image\n",
       "3. Exit\n",
-      "1. Train and Test Model\n",
+      "Accuracy : 50.0%\n",
+      "1. Train Model\n",
       "2. Predict Image\n",
       "3. Exit\n",
-      "Thanks!\n"
+      "Thanks\n"
      ]
     }
    ],
    "source": [
-    "main()"
+    "main_menu()"
    ]
   }
  ],
